# FaceCounter-withOpenCV

./: CMakeLists.txt  tutorial.cpp
